Worked on restructuring code to be more readable and maintainable, added fonts and corrected blemishes

--- a/LetsDoIt/letsdoit/src/main/resources/static/css/EditTask.css
+++ b/LetsDoIt/letsdoit/src/main/resources/static/css/EditTask.css
@@ -1,5 +1,10 @@
 * {
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    /* font-family: 'Comic Sans MS', 'Comic Sans', cursive; */
+    font-family: 'Play', sans-serif;
+}
+
+#logo {
+    font-family: 'Carter One', sans-serif;
 }
 
 .content-container {
