--- a/LetsDoIt/letsdoit/src/main/resources/static/css/Home.css
+++ b/LetsDoIt/letsdoit/src/main/resources/static/css/Home.css
@@ -1,6 +1,11 @@
 * {
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    /* font-family: 'Comic Sans MS', 'Comic Sans', cursive; */
+    font-family: 'Play', sans-serif;
 
+}
+
+#logo {
+    font-family: 'Carter One', sans-serif;
 }
 
 .content-container {
@@ -49,4 +54,3 @@ th {
     overflow-y: auto;
     /* max-height: 300px; */
 }
-
